Fixed overflow being shown on notification

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -5,6 +5,7 @@ html {
     body {
         font-family: Poppins;
         margin: 0 20px 20px;
+        overflow-x: hidden;
     }
 }
 
